started with ML on raw data

--- a/fastespy/notebooks/plot_ml_hyper_parameter_results.ipynb
+++ b/fastespy/notebooks/plot_ml_hyper_parameter_results.ipynb
@@ -20,13 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "classifier = 'dt'\n",
     "#classifier = 'bdt'\n",
-    "#classifier = 'rf'\n",
+    "classifier = 'rf'\n",
     "#classifier = 'mlp'"
    ]
   },
@@ -332,9 +332,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
