--- a/fastespy/notebooks/example_pulse_fitting.ipynb
+++ b/fastespy/notebooks/example_pulse_fitting.ipynb
@@ -705,9 +705,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:iminuit]",
+   "display_name": "Python [conda env:ml]",
    "language": "python",
-   "name": "conda-env-iminuit-py"
+   "name": "conda-env-ml-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -719,9 +719,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
