--- a/fastespy/notebooks/raw-data-pca-keras-mlp.ipynb
+++ b/fastespy/notebooks/raw-data-pca-keras-mlp.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5c9f1d8e",
    "metadata": {},
    "source": [
     "# Testing KERAS classification with MLP"
@@ -11,7 +10,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d2e283b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +40,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ad73d737",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +49,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "19cd43ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +57,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03c2b1cc",
    "metadata": {
     "tags": []
    },
@@ -72,7 +67,6 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "f0926ced",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +103,6 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "6c842080",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +171,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ebd873a-cb77-4fd4-95f8-ec4bce4c0f47",
    "metadata": {},
    "source": [
     "Convert raw data into machine learning format with samples and features"
@@ -187,7 +179,6 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "bd9f1d22-dff3-4b1b-a458-acd8998f811d",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +200,6 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "5bf84a04-1689-42f8-b949-38064fcd8f2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +211,6 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "039429c0-919c-4f1b-89c8-20598476bf35",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +233,6 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "1ab397fd-c476-4cd1-955c-d59e8922a83f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +242,6 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "1c3a5b07-df70-4d5f-998f-f591433fb665",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +273,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ddf9061-719a-4a9e-b8a8-a2492d514f4d",
    "metadata": {},
    "source": [
     "Split the data"
@@ -295,7 +281,6 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "37a23152",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +290,6 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "726d5a18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +300,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bf759ba-1e8b-4de5-9eb5-83d2a93a9903",
    "metadata": {},
    "source": [
     "## Try PCA"
@@ -325,7 +308,6 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "049cca8a-e7ea-495e-8897-87dd45108570",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +317,6 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "1646ccbb-d23b-435f-92fa-2451a4abef87",
    "metadata": {
     "tags": []
    },
@@ -349,7 +330,6 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "166105b1-ab1c-44aa-9af0-10e9c64df2a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +339,6 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "id": "768e9395-9ebe-449b-8573-ad4b590eb458",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +348,6 @@
   {
    "cell_type": "code",
    "execution_count": 195,
-   "id": "97bf6b7a-0915-4976-b042-5e1a9b52245d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +357,6 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "ea8a23bc-716c-47d1-b7fc-98771e5c94a9",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +376,6 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "9c7b5940-7eb9-4a4f-b1be-770b139511a1",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +410,6 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "060c3d31-ebd6-4dc1-8b55-498dcccba734",
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +441,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf4b8072",
    "metadata": {},
    "source": [
     "Normalize the data"
@@ -475,7 +449,6 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "id": "58c0ae6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +467,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff063adf",
    "metadata": {},
    "source": [
     "### Define the model"
@@ -503,7 +475,6 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "eb410f91",
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +493,6 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "37559ef3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +505,6 @@
   {
    "cell_type": "code",
    "execution_count": 202,
-   "id": "98f98f24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +519,6 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "id": "dc819b8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +535,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac25c5b7-cae4-40b5-9297-9743e01b9d94",
    "metadata": {},
    "source": [
     "Initial predictions"
@@ -576,7 +543,6 @@
   {
    "cell_type": "code",
    "execution_count": 204,
-   "id": "f534cde6",
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +600,6 @@
   {
    "cell_type": "code",
    "execution_count": 205,
-   "id": "997d0955-fb28-4929-bb21-47616b6aa22e",
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +640,6 @@
   {
    "cell_type": "code",
    "execution_count": 206,
-   "id": "77b0eb78-5a2f-4c14-a090-fddd6a07d896",
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +657,6 @@
   {
    "cell_type": "code",
    "execution_count": 207,
-   "id": "30d2d150-3a79-42ef-8951-35ba8959b65e",
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +676,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00f15866",
    "metadata": {},
    "source": [
     "Save the inital weights"
@@ -722,7 +684,6 @@
   {
    "cell_type": "code",
    "execution_count": 208,
-   "id": "12901cd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +693,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cab10343",
    "metadata": {},
    "source": [
     "### Train the full model"
@@ -741,7 +701,6 @@
   {
    "cell_type": "code",
    "execution_count": 209,
-   "id": "55d7ba81",
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +758,6 @@
   {
    "cell_type": "code",
    "execution_count": 210,
-   "id": "cd65b0a4-961a-4b88-81dd-283955af6086",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +775,6 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "4c8e6080-a275-43f3-8997-c16d2817a368",
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +848,6 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "6c832de7-bdf1-431b-bd61-3438a511239a",
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +892,6 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "232000ce",
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +909,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "766425b8",
    "metadata": {},
    "source": [
     "### Evaluate metrics on training and validation set"
@@ -963,7 +917,6 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "6becd9fe",
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +943,6 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "id": "e4892add",
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +970,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "081f328e",
    "metadata": {},
    "source": [
     "### Retrain with class weights"
@@ -1027,7 +978,6 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "5c50f78f",
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1014,6 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "71c9a29a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1088,7 +1037,6 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "f25b44d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1126,7 +1074,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e0dce89",
    "metadata": {},
    "source": [
     "## Significance as function of threshold"
@@ -1134,7 +1081,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88a458c9",
    "metadata": {},
    "source": [
     "For validation set"
@@ -1143,7 +1089,6 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "9d8e8b8a",
    "metadata": {},
    "outputs": [
     {
@@ -1178,7 +1123,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "401a5e08",
    "metadata": {},
    "source": [
     "For training set"
@@ -1187,7 +1131,6 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "8f8812e4",
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1166,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c0caf68",
    "metadata": {},
    "source": [
     "Significance for test set with the threshold obtained from training set:"
@@ -1232,7 +1174,6 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "id": "d5b5c414",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1242,7 +1183,6 @@
   {
    "cell_type": "code",
    "execution_count": 222,
-   "id": "3ae6ab55-d518-47da-a185-91aba59b8060",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1252,7 +1192,6 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "c5649f56-651e-4aac-bfe2-405b016413f5",
    "metadata": {},
    "outputs": [
     {
@@ -1281,7 +1220,6 @@
   {
    "cell_type": "code",
    "execution_count": 224,
-   "id": "837e105d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1291,7 +1229,6 @@
   {
    "cell_type": "code",
    "execution_count": 228,
-   "id": "d4b25af9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1310,7 +1247,6 @@
   {
    "cell_type": "code",
    "execution_count": 229,
-   "id": "59c39afe",
    "metadata": {},
    "outputs": [
     {
@@ -1327,7 +1263,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c995f39",
    "metadata": {},
    "source": [
     "Plot false positives for test set"
@@ -1336,7 +1271,6 @@
   {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "6a1d8c10",
    "metadata": {},
    "outputs": [
     {
@@ -1375,7 +1309,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "341d8f5c",
    "metadata": {},
    "source": [
     "### Learning curve"
@@ -1384,7 +1317,6 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "b81ca9ca-b817-4690-853b-f651934af625",
    "metadata": {},
    "outputs": [
     {
@@ -1407,7 +1339,6 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "8cc6d0be-ace7-4903-9265-2a7383661326",
    "metadata": {},
    "outputs": [
     {
@@ -1442,7 +1373,6 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "61808cc8-bc07-4d42-8cbd-4deb94dacf76",
    "metadata": {},
    "outputs": [
     {
@@ -1472,7 +1402,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e40b5dc",
    "metadata": {
     "tags": []
    },
@@ -1483,7 +1412,6 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "58ef9af6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1496,7 +1424,6 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "2bd486d2",
    "metadata": {},
    "outputs": [
     {
@@ -2134,7 +2061,6 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "9305492b",
    "metadata": {},
    "outputs": [
     {
@@ -2163,7 +2089,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ab27d3d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2171,9 +2096,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:apple_tf]",
+   "display_name": "Python [conda env:ml]",
    "language": "python",
-   "name": "conda-env-apple_tf-py"
+   "name": "conda-env-ml-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2185,7 +2110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
