setup demo notebooks

--- a/notebooks/plot_hyper_parameter_tuning_results.ipynb
+++ b/notebooks/plot_hyper_parameter_tuning_results.ipynb
@@ -325,6 +325,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Parameter profiles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Loop over different classifier"
    ]
   },
